[button:radio] Fix alignment

--- a/src/components/discovery-button/discovery-button.scss
+++ b/src/components/discovery-button/discovery-button.scss
@@ -1,5 +1,5 @@
 /*!
- *   Copyright 2022-2024 SenX S.A.S.
+ *   Copyright 2022-2025 SenX S.A.S.
  *
  *   Licensed under the Apache License, Version 2.0 (the "License");
  *   you may not use this file except in compliance with the License.
@@ -157,6 +157,13 @@
         animation: button-loading-spinner 1s ease infinite;
       }
     }
+  }
+
+  .discovery-btn-radio {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   @keyframes button-loading-spinner {
